Add scheduled function handling.